# transitive-constraint-plugin

./: .gitignore  CHANGELOG.md  cabal.project  transitive-constraint-plugin.cabal
examples/: Free.hs  GCD.hs  GCDExe.hs  GCDLib.hs
semsyn/: Main.hs
src/: Sub.hs  SubInstances.hs  SubTrans.hs  TransitiveConstraintPlugin.hs
