cabal-version:   3.0
name:            transitive-constraint-plugin
version:         0.1.0.0
license:         NONE
author:          jaro.reinders@gmail.com
maintainer:      Jaro Reinders
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall -dcore-lint

library
    import:           warnings
    exposed-modules:  TransitiveConstraintPlugin, Sub
    build-depends:    base ^>= {4.17,4.18}, ghc ^>= {9.4,9.6}
    hs-source-dirs:   src
    default-language: GHC2021

executable free-example
    import:           warnings
    main-is:          Free.hs
    build-depends:    base, transitive-constraint-plugin
    hs-source-dirs:   examples
    default-language: GHC2021
