cabal-version:   3.0
name:            transitive-constraint-plugin
version:         0.1.0.0
license:         NONE
author:          jaro.reinders@gmail.com
maintainer:      Jaro Reinders
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall -dcore-lint

library
    import:           warnings
    exposed-modules:  TransitiveConstraintPlugin, Sub, SubInstances
    build-depends:    base ^>= {4.21}, ghc ^>= {9.12}
    -- Could support 9.4 & 9.6 with some CPP
    -- build-depends:    base ^>= {4.17,4.18,4.21}, ghc ^>= {9.4,9.6,9.12}
    hs-source-dirs:   src
    default-language: GHC2021

executable semsyn
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, transitive-constraint-plugin
    hs-source-dirs:   semsyn
    default-language: GHC2021

executable gcd-example
    import:           warnings
    main-is:          GCDExe.hs
    other-modules:    GCDLib
    build-depends:    base, transitive-constraint-plugin, ghc ^>= 9.12
    hs-source-dirs:   examples
    default-language: GHC2021

-- executable free-example
--     import:           warnings
--     main-is:          Free.hs
--     build-depends:    base, transitive-constraint-plugin
--     hs-source-dirs:   examples
--     default-language: GHC2021

-- executable pcf-example
--     import:           warnings
--     main-is:          PCF.hs
--     build-depends:    base, transitive-constraint-plugin
--     hs-source-dirs:   examples
--     default-language: GHC2021
